--- a/cms/includes/after.chooser.php.html
+++ b/cms/includes/after.chooser.php.html
@@ -14,11 +14,12 @@ function select_item(item){
 <link href="../css/CMS_3.0.picker.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+
 <?php
 include ('../includes/config.inc.php');
    echo	('<table cellpadding="4" cellspacing="2" border="0" width="100%">');
 
-$SQL = mysqli_query('SELECT * FROM site_images WHERE cat="3"') or die ('Invalid Images Query: ' . mysqli_error());
+$SQL = mysqli_query($mdb, 'SELECT * FROM site_images WHERE cat="3"') or die ('Invalid Images Query: ' . mysqli_error($mdb));
 $icount = mysqli_num_rows($SQL);
 
    	while ($p = mysqli_fetch_array($SQL)) {
